--- a/index.html
+++ b/index.html
@@ -1,11 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Israt Jahan Rani</title>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <!-- Google font: Montserrat -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900&display=swap"
+        rel="stylesheet">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- UIkit -->
+    <link rel="stylesheet" href="css/uikit.min.css">
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="css/fontawesome.css">
+    <!-- Theme stylesheet -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+
 </head>
+
 <body>
-    
+
+    <div class="container-full-width">
+        <div class="side-nav">
+            <nav>
+                <div class="user-logo">
+                    <img src="images/Image 1.png" alt="">
+                </div>
+                <ul>
+                    <li>
+                        <a href="#">
+                            <i class="fad fa-home"></i>
+                            <p>Home</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fad fa-users"></i>
+                            <p>Family</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fad fa-user-graduate"></i>
+                            <p>Education</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fad fa-palette"></i>
+                            <p>Hobbies</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fad fa-trophy-alt"></i>
+                            <p>Achievement</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fad fa-spa"></i>
+                            <p>Plan & purpose</p>
+                        </a>
+                    </li>
+
+                </ul>
+            </nav>
+        </div>
+        <div class="site-content-area">
+            <div class="page-wrap">
+                
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- script files -->
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/uikit.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
