--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 <body>
 
     <div class="container-full-width">
+        <!-- navigation section start from here -->
         <div class="side-nav">
             <nav>
                 <div class="user-logo">
-                    <img src="images/Image 1.png" alt="">
+                    <img src="images/Image 1.jpg" alt="">
                 </div>
                 <ul>
                     <li>
@@ -72,10 +73,13 @@
                 </ul>
             </nav>
         </div>
+        <!-- navigation section end here -->
         <div class="site-content-area">
+            <!-- site content start from here -->
             <div class="page-wrap">
-                
+
             </div>
+            <!-- site content end here -->
         </div>
     </div>
 
