--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- Google font: Montserrat -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900&display=swap"
-        rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900&display=swap"
+        rel="stylesheet"> -->
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- UIkit -->
@@ -30,43 +30,43 @@
         <div class="side-nav">
             <nav>
                 <div class="user-logo">
-                    <img src="images/Image 1.jpg" alt="">
+                    <img src="images/Image 1.jpg" alt="Rani">
                 </div>
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="#home" uk-scroll>
                             <i class="fad fa-home"></i>
                             <p>Home</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#family" uk-scroll>
                             <i class="fad fa-users"></i>
                             <p>Family</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#education" uk-scroll>
                             <i class="fad fa-user-graduate"></i>
                             <p>Education</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#hobbies" uk-scroll>
                             <i class="fad fa-palette"></i>
                             <p>Hobbies</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#achievement" uk-scroll>
                             <i class="fad fa-trophy-alt"></i>
                             <p>Achievement</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#plan" uk-scroll>
                             <i class="fad fa-spa"></i>
-                            <p>Plan & purpose</p>
+                            <p>Plan & Purpose</p>
                         </a>
                     </li>
 
@@ -77,7 +77,170 @@
         <div class="site-content-area">
             <!-- site content start from here -->
             <div class="page-wrap">
-
+                <!-- home section -->
+                <div id="home" class="home-sec">
+                    <div class="row">
+                        <div class="col-md-6 col-sm-6">
+                            <div class="home-content">
+                                <h1>Israt Jahan Rani</h1>
+                                <h4>12 June 2001</h4>
+                                <a href="#" class="theme-btn">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <div class="home-content-img">
+                                <img src="images/761 copy.png" alt="Israt Jahan Rani">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- family section -->
+                <div id="family" class="family-sec">
+                    <div class="row">
+                        <div class="col-md-6 col-sm-6">
+                            <h3>Family</h3>
+                            <p>In our family, we are 4 members. My father’s name is Rana Ahmed. He is a private
+                                company’s employee. My mother’s name is Doly Akter. She is a teacher. I have an elder
+                                brother. He reads Honr’s in chemistry (4th year) from National University.</p>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <img src="images/undraw_hang_out_h9ud.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <!-- education section -->
+                <div id="education" class="education-sec">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3>Educational Qualification</h3>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <div class="edu-card">
+                                <div class="edu-card-num">
+                                    <div class="card-num-view">
+                                        <p>BSC</p>
+                                    </div>
+                                </div>
+                                <div class="edu-card-dtl">
+                                    <div class="edu-card-text">
+                                        <p>2019-Present</p>
+                                        <a href="#" target="_blank">Department of Computer Science And Engineering</a>
+                                        <p>United International University</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6"></div>
+                        <div class="col-md-6 col-sm-6">
+                            <div class="edu-card">
+                                <div class="edu-card-num">
+                                    <div class="card-num-view">
+                                        <p>HSC</p>
+                                    </div>
+                                </div>
+                                <div class="edu-card-dtl">
+                                    <div class="edu-card-text">
+                                        <p>GPA: <b>4.89</b></p>
+                                        <p>Passing Year: 2019</p>
+                                        <p>Narayangonj govt. Tolaram College</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <div class="edu-card">
+                                <div class="edu-card-num">
+                                    <div class="card-num-view">
+                                        <p>SSC</p>
+                                    </div>
+                                </div>
+                                <div class="edu-card-dtl">
+                                    <div class="edu-card-text">
+                                        <p>GPA: <b>4.91</b></p>
+                                        <p>Passing Year: 2017</p>
+                                        <p>Hariharpara High School</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <div class="edu-card">
+                                <div class="edu-card-num">
+                                    <div class="card-num-view">
+                                        <p>JSC</p>
+                                    </div>
+                                </div>
+                                <div class="edu-card-dtl">
+                                    <div class="edu-card-text">
+                                        <p>GPA: <b>5.00</b></p>
+                                        <p>Passing Year: 2014</p>
+                                        <p>Hariharpara High School</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <div class="edu-card">
+                                <div class="edu-card-num">
+                                    <div class="card-num-view">
+                                        <p>PSC</p>
+                                    </div>
+                                </div>
+                                <div class="edu-card-dtl">
+                                    <div class="edu-card-text">
+                                        <p>GPA: <b>5.00</b></p>
+                                        <p>Passing Year: 2011</p>
+                                        <p>Shasongoan Pioneer Child Academy</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- hobbies section -->
+                <div id="hobbies" class="hobbies-sec text-center">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-3">
+                            <p><i></i>Painting</p>
+                        </div>
+                        <div class="col-md-3 col-sm-3">
+                            <p><i></i>Play Guitar</p>
+                        </div>
+                        <div class="col-md-3 col-sm-3">
+                            <p><i></i>Online Game</p>
+                        </div>
+                        <div class="col-md-3 col-sm-3">
+                            <p><i></i>Listening Song</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- achievement section -->
+                <div id="achievement" class="achievement-sec">
+                    <div class="row">
+                        <div class="col-md-6 col-sm-6">
+                            <h3>Achievement</h3>
+                            <ul>
+                                <li>All Educational Certificate.</li>
+                                <li>Painting Certificate form Bangladesh Govt. Shisu Academy.</li>
+                                <li>Got a private scholarship from Narayangonj City Corporation when I was in class 3.
+                                </li>
+                                <li>Represent my normal English medium school to all.</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <img src="images/Group 50.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <!-- plan & purpose -->
+                <div id="plan" class="plan-sec">
+                    <div class="plan-content text-center">
+                        <h3>Future Plan And purpose</h3>
+                        <p>Since I am a CSE student, so I want to be a great programmer in Bangladesh. Want to go to
+                            Australia or Canada for higher education. Besides I want to continue my painting also.</p>
+                    </div>
+                </div>
+                <footer></footer>
             </div>
             <!-- site content end here -->
         </div>
