--- a/index.html
+++ b/index.html
@@ -80,16 +80,11 @@
                 <!-- home section -->
                 <div id="home" class="home-sec">
                     <div class="row">
-                        <div class="col-md-6 col-sm-6">
+                        <div class="col-12">
                             <div class="home-content">
                                 <h1>Israt Jahan Rani</h1>
                                 <h4>12 June 2001</h4>
-                                <a href="#" class="theme-btn">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="home-content-img">
-                                <img src="images/761 copy.png" alt="Israt Jahan Rani">
+                                <a href="#family" class="theme-btn" uk-scroll>Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -97,13 +92,13 @@
                 <!-- family section -->
                 <div id="family" class="family-sec">
                     <div class="row">
-                        <div class="col-md-6 col-sm-6">
+                        <div class="col-md-5 col-sm-6">
                             <h3>Family</h3>
                             <p>In our family, we are 4 members. My father’s name is Rana Ahmed. He is a private
                                 company’s employee. My mother’s name is Doly Akter. She is a teacher. I have an elder
                                 brother. He reads Honr’s in chemistry (4th year) from National University.</p>
                         </div>
-                        <div class="col-md-6 col-sm-6">
+                        <div class="col-md-6 offset-md-1 col-sm-6">
                             <img src="images/undraw_hang_out_h9ud.svg" alt="">
                         </div>
                     </div>
@@ -201,16 +196,16 @@
                 <div id="hobbies" class="hobbies-sec text-center">
                     <div class="row">
                         <div class="col-md-3 col-sm-3">
-                            <p><i></i>Painting</p>
+                            <p><i class="fal fa-paint-brush"></i>Painting</p>
                         </div>
                         <div class="col-md-3 col-sm-3">
-                            <p><i></i>Play Guitar</p>
+                            <p><i class="fal fa-guitar-electric"></i>Play Guitar</p>
                         </div>
                         <div class="col-md-3 col-sm-3">
-                            <p><i></i>Online Game</p>
+                            <p><i class="fal fa-gamepad-alt"></i>Online Game</p>
                         </div>
                         <div class="col-md-3 col-sm-3">
-                            <p><i></i>Listening Song</p>
+                            <p><i class="fal fa-headphones-alt"></i>Listening Song</p>
                         </div>
                     </div>
                 </div>
